# befundr-app

./: .env.example  .firebaserc  .gitignore  .prettierignore  .prettierrc  README.md  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  type.d.ts
anchor/: .gitignore  Anchor.toml  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  (+1 more)
anchor/programs/befundr/: Cargo.toml
anchor/programs/befundr/src/: constants.rs  errors.rs  lib.rs
anchor/programs/befundr/src/instructions/: mod.rs
anchor/programs/befundr/src/instructions/config/: mod.rs  update_admins.rs  update_usdc_mint.rs
anchor/programs/befundr/src/instructions/nft/: mod.rs  set_collection.rs
anchor/programs/befundr/src/instructions/project/: approve_project.rs  create_project.rs  mod.rs  start_commu_presale.rs  start_incubation.rs  start_nft_presale.rs  start_public_sale.rs
anchor/programs/befundr/src/instructions/project/contribution/: buy_token.rs  mod.rs  start_nft_presale.rs
anchor/programs/befundr/src/instructions/project/nft/: mint_nft.rs  mod.rs  start_nft_mint_round.rs  start_nft_presale.rs
anchor/programs/befundr/src/instructions/project/token/: create_token.rs
anchor/programs/befundr/src/state/: globals.rs  mod.rs
anchor/programs/befundr/src/state/community/: community.rs
anchor/programs/befundr/src/state/nft/: mod.rs  nft_allocation.rs  token_allocation.rs
anchor/programs/befundr/src/state/project/: project.rs
anchor/programs/befundr/src/state/referral/: mod.rs  referral.rs  referral_code.rs
(+303 files in other folders)
