[package]
name = "befundr"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "befundr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["spl-associated-token-account", "spl-token"] }
mpl-core = {version = "0.9.1", features = ["anchor"]}
mpl-token-metadata = "5.1.0"
